force-app/main/default/objects/OpportunityLineItem/fields/Adjusted_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Sales_Price__c</fullName>
    <formula>(UnitPrice * Quantity ) + (UnitPrice * Quantity )* Opportunity.Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>