force-app/main/default/objects/OpportunityLineItem/fields/Bundled_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>Bundled_OpportunityId__c</fullName>
    <description>This field is created for Quote templates</description>
    <formula>CASESAFEID(Opportunity.Bundle_Opportunity__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundled OpportunityId</label>
    <type>Text</type>
</CustomField>