force-app/main/default/objects/OpportunityLineItem/fields/Child_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Child Opportunity Product</relationshipLabel>
    <relationshipName>Child_Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>