force-app/main/default/objects/OpportunityLineItem/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>TotalAdjustedPrice__c * Opportunity.Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>