force-app/main/default/objects/OpportunityLineItem/fields/Discount_DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Discount_DiscountAmount__c</fullName>
    <formula>IF( NOT( ISNULL( Discount_Amount__c ) ) , &apos;$&apos;+(TEXT(Discount_Amount__c)) , IF( Discount &gt; 0 , (TEXT(Discount * 100))+&apos;%&apos;, TEXT(0)) )</formula>
    <label>Discount/DiscountAmount</label>
    <type>Text</type>
</CustomField>