force-app/main/default/objects/OpportunityLineItem/fields/DMS_qb_Acct__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_Acct__c</fullName>
    <label>DMS qb Acct</label>
    <length>50</length>
    <type>Text</type>
</CustomField>