force-app/main/default/objects/OpportunityLineItem/fields/DMS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DMS_Quantity__c</fullName>
    <label>DMS Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>