force-app/main/default/objects/OpportunityLineItem/fields/DMS_WO_Lines_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_WO_Lines_Id__c</fullName>
    <label>DMS WO Lines Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>