force-app/main/default/objects/OpportunityLineItem/fields/DMS_WO_Lines_Invcost__c.field-meta.xml
<CustomField>
    <fullName>DMS_WO_Lines_Invcost__c</fullName>
    <label>DMS WO Lines Invcost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>