force-app/main/default/objects/OpportunityLineItem/fields/DMS_WO_Num__c.field-meta.xml
<CustomField>
    <fullName>DMS_WO_Num__c</fullName>
    <label>DMS WO Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>