force-app/main/default/objects/OpportunityLineItem/fields/External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Id__c</fullName>
    <formula>Opportunity.External_Record_Id__c</formula>
    <label>External Opportunity Id</label>
    <type>Text</type>
</CustomField>