force-app/main/default/objects/OpportunityLineItem/fields/External_Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Pricebook_Entry_Id__c</fullName>
    <formula>PricebookEntry.External_Record_Id__c</formula>
    <label>External Pricebook Entry Id</label>
    <type>Text</type>
</CustomField>