force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quantity__c</fullName>
    <label>Invoice Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>