force-app/main/default/objects/OpportunityLineItem/fields/Migration_Details__c.field-meta.xml
<CustomField>
    <fullName>Migration_Details__c</fullName>
    <label>Migration Details</label>
    <length>1023</length>
    <type>Html</type>
</CustomField>