force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <formula>Opportunity.Record_Type_Name__c</formula>
    <label>Opportunity Record Type Name</label>
    <type>Text</type>
</CustomField>