force-app/main/default/objects/OpportunityLineItem/fields/QuoteLineDescription__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineDescription__c</fullName>
    <formula>IF( NOT(ISBLANK(Description)),Description, PricebookEntry.Product2.Name  )</formula>
    <label>Quote Line Description</label>
    <type>Text</type>
</CustomField>