force-app/main/default/objects/OpportunityLineItem/fields/SalesPriceAdjusted__c.field-meta.xml
<CustomField>
    <fullName>SalesPriceAdjusted__c</fullName>
    <formula>IF(Quantity&gt;1, (TotalAdjustedPrice__c) / Quantity,TotalAdjustedPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price (Adjusted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>