force-app/main/default/objects/OpportunityLineItem/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>