force-app/main/default/objects/OpportunityLineItem/fields/TotalAdjustedPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustedPrice__c</fullName>
    <formula>Adjusted_Sales_Price__c  + Adjusted_Sales_Price__c   * Opportunity.G_A__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with G&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>