force-app/main/default/objects/OpportunityLineItem/validationRules/DiscountPrcnt_or_DiscountAmt_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountPrcnt_or_DiscountAmt_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL( Discount )),NOT(ISNULL( Discount_Amount__c )))</errorConditionFormula>
    <errorMessage>You can fill only one field, either the &quot;Discount %&quot; or  the &quot;Discount Amount&quot;.</errorMessage>
</ValidationRule>